...
        android:label="@string/admin_fragment_label"
        tools:layout="@layout/fragment_admin">

        <!-- Admin Button -->
        <action
            android:id="@+id/action_AdminProfileFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />

    </fragment>

    <!-- Admin Browse Image Fragment -->
    <fragment
        android:id="@+id/AdminFragmentImageView"
...
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">

        <!-- Edit Profile Button -->
        <action
            android:id="@+id/action_ProfileFragment_to_EditProfileFragment"
            app:destination="@+id/EditProfileFragment" />
        <!-- Delete Profile Button -->
        <action
            android:id="@+id/action_ProfileFragment_to_AdminFragment"
            app:destination="@+id/AdminFragment" />
    </fragment>

...
