...
            app:title="@string/eventwizard_text"
            app:titleTextColor="@color/white"
            app:titleCentered="true" >

            <!-- Profile Picture Button -->
            <ImageButton
                android:id="@+id/profilePictureButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:src="@drawable/noname"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_picture_button_desc"
...
